# ope-cluster-context

./: README.md  pyproject.toml  setup.sh
chips/: run_experiments.py  utils.py
chips/config/: settings.yaml
chips/experiment/: __init__.py  multiclass.py  real.py  synthetic.py
chips/ope/: estimators.py  evaluation.py  generation.py  legacy.py
